# schedule-optimizer

./: .gitignore  EXPLAIN_ME.md  IMPLEMENTATION.md  README.md  app-cloudformation.yaml  app.py  debug_scheduler.py  main.py  pyproject.toml
.amazonq/cli-agents/: developer.json
.amazonq/rules/: development_guide.md  principle.md
data/: README.md
deployment/: .bedrock_agentcore.yaml  README.md  deploy.sh  invoke.py  requirements.txt
deployment/.bedrock_agentcore/schedule_agent/: Dockerfile
deployment/schedule_agent/: cli.py
deployment/schedule_agent/agent/: README.md  agent.py  config.py  run.py  tools.py
deployment/schedule_agent/core/: __init__.py  constraints_builder.py  data_store.py  pipeline.py  preprocessor.py  scheduler.py
deployment/schedule_agent/models/: data_models.py
deployment/schedule_agent/utils/: time_utils.py  visualization.py
schedule_agent/: cli.py
schedule_agent/agent/: config.py  run.py  tools.py
schedule_agent/core/: __init__.py  constraints_builder.py  data_store.py  pipeline.py  preprocessor.py  scheduler.py
schedule_agent/models/: __init__.py
schedule_agent/utils/: __init__.py  time_utils.py  visualization.py
spec/: design.md  requirements.md
tests/: README.md  test_constraints_builder.py  test_datastore.py  test_e2e.py  test_preprocessor.py  test_scheduler.py  test_visualization.py
tests/data/: prescription.csv  shift_test.xlsx  therapist.csv
