[project]
name = "schedule-optimizer"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "click>=8.3.0",
    "openpyxl>=3.1.5",
    "pandas>=2.3.3",
    "scipy>=1.16.2",
    "strands-agents>=1.12.0",
    "strands-agents-tools>=0.2.11",
]

[project.scripts]
schedule-agent = "schedule_agent.cli:cli"
